--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <artifactId>selenium-java</artifactId>
         <version>3.141.59</version>
     </dependency>
+    <!--4 best supported-->
+    <dependency>
+        <groupId>net.sourceforge.htmlunit</groupId>
+        <artifactId>htmlunit</artifactId>
+        <version>2.32</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-htmlunit-driver -->
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
