--- a/pom.xml
+++ b/pom.xml
@@ -9,42 +9,42 @@
     <version>1.0-SNAPSHOT</version>
 <dependencies>
 
-    <!--TO PSUJE HTMLDRIVER-->
-    <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-firefox-driver</artifactId>
-        <version>3.141.59</version>
-    </dependency>
 
 
 
-    <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-htmlunit-driver</artifactId>
-        <version>2.52.0</version>
-    </dependency>
+    <!--<dependency>-->
+        <!--<groupId>org.seleniumhq.selenium</groupId>-->
+        <!--<artifactId>selenium-htmlunit-driver</artifactId>-->
+        <!--<version>2.52.0</version>-->
+    <!--</dependency>-->
     <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>1.3</version>
     </dependency>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>5.2.0</version>
-        <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+        <!--<groupId>org.junit.jupiter</groupId>-->
+        <!--<artifactId>junit-jupiter-api</artifactId>-->
+        <!--<version>5.2.0</version>-->
+        <!--<scope>test</scope>-->
+    <!--</dependency>-->
 
     <!--<dependency>-->
     <!--<groupId>org.seleniumhq.selenium</groupId>-->
     <!--<artifactId>selenium-remote-driver</artifactId>-->
     <!--<version>2.44.0</version>-->
     <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.seleniumhq.selenium</groupId>-->
-    <!--<artifactId>selenium-java</artifactId>-->
-    <!--<version>3.141.59</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+    </dependency>
+    <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.2.0</version>
+    <scope>test</scope>
+    </dependency>
     <!--&lt;!&ndash;4 best supported&ndash;&gt;-->
     <!--<dependency>-->
     <!--<groupId>net.sourceforge.htmlunit</groupId>-->
