--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
 language: java
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y dbus-x11
+  - export $(dbus-launch)
+  - export NSS_USE_SHARED_DB=ENABLED
+  - firefox &
+addons:
+  firefox: latest
+chrome: stable
