--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+env:
+  - MOZ_HEADLESS=1
+addons:
+  firefox: latest
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y dbus-x11
