--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: java
+  
+
 before_install:
+- wget https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
+  - tar -xzf geckodriver-v0.18.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/resources
+  - geckodriver --version
   - sudo apt-get -qq update
   - sudo apt-get install -y dbus-x11
   - export $(dbus-launch)
   - export NSS_USE_SHARED_DB=ENABLED
   - firefox &
+  - export MOZ_HEADLESS=1
 addons:
   firefox: latest
 chrome: stable
