--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 before_install:
 - wget https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
-- tar -xzf geckodriver-v0.24.0-linux64.tar.gz -C geckodriver
+- tar -xzf geckodriver-v0.24.0-linux64.tar.gz -C resources
 - export PATH=$PATH:$PWD/resources
 - geckodriver --version
 - sudo apt-get -qq update
